--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@heroui/react": "^2.8.5",
     "framer-motion": "^12.23.24",
-    "next": "16.0.0-beta.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.0-beta.0",
     "eslint-config-prettier": "^10.1.8",
@@ -32,9 +32,5 @@
     "prettier-plugin-tailwindcss": "^0.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
   }
 }
